<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS loc</string>
    <string name="active">active</string>
    <string name="defaultText">SMS loc</string>
    <string name="defaultTrigger">WhereRU</string>
    <string name="textIntro">This app can respond to SMS messages with a given text by sending the actual gps location back to the sender.</string>
    <string name="textTitle">Trigger text</string>
    <string name="textTriggerDescription">Enter the text, on which a response should be triggered:</string>
    <string name="textTriggerOn">Automatic responses are activated. We will respond to SMS messages with the text</string>
    <string name="textTriggerOnShort">Respond to:</string>
    <string name="textTriggerOff">No automatic responses will be sent.</string>
    <string name="textRequests">Requests so far:</string>
    <string name="textNoRequests">No Requests so far&#8230;</string>
    <string name="activateDescription">Select this, to activate automatic responses:</string>
    <string name="notificationTitle">request for location</string>
    <string name="notificationSentSuccess">current location sent to %1$s</string>
    <string name="notificationSentNetwork">current network location sent to %1$s</string>
    <string name="notificationSentNoFix">no gps fix to send location to %1$s</string>
    <string name="notificationNoGps">no gps enabled for request from %1$s - please enable gps and send again from history</string>
    <string name="notificationAborted">request for %1$s aborted</string>
    <string name="notificationRequest">location request from %1$s</string>
    <string name="locationResponse">http://maps.google.de/maps?q=%1$s,%2$s ; Accuracy: %3$s m ; Speed: %4$s m/s ; Age: %5$s s</string>
    <string name="locationResponseNetwork">Last network location: http://maps.google.de/maps?q=%1$s,%2$s ; Accuracy: %3$s m ; Speed: %4$s m/s ; Age: %5$s s</string>
    <string name="locationUnknown">Unable to determine location.</string>
    <string name="toastRequest">trying to send location to %1$s</string>
    <string name="toggleButton">active</string>
    <string name="timeTitle">Time to gps fix</string>
    <string name="timeDescription">How long should I try to determine the actual gps location before sending back a response?</string>
    <string name="useNetworkTitle">Fall back to network location</string>
    <string name="useNetworkDescription">Enable this, to respond with the last known network location when either gps is disabled or there was no gps fix in time.</string>
    <string name="googleMapsTitle">Newest Google Maps</string>
    <string name="googleMapsDescription">Enable this, to be compatible with the latest Google Maps.</string>
    <string name="helpUrl">http://www.pfeuffer-web.de/SMSloc/help-en</string>
    <string-array name="times">
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 mintues</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="timeValues">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>600</item>
        <item>3600</item>
    </string-array>
    <string name="defaultTime">600</string>
    <string name="menuPreferences">Preferences</string>
    <string name="menuClearRequests">Clear history</string>
    <string name="menuAbout">About</string>
    <string name="contextSendAgain">send again</string>
    <string name="contextCall">call number</string>
    <string name="contextSendSms">send sms</string>
    <string name="geoUrl">geo:%1$s,%2$s?q=%3$s%4$s</string>
    <string name="locationListEntryHeader">"%1$s, %2$s</string>
    <string name="locationListEntryFooter">"%1$s (%2$s)</string>
    <string name="statusLocationFound">location sent</string>
    <string name="statusNoLocation">no location found</string>
    <string name="statusRunning">not sent, yet</string>
    <string name="statusNoGps">gps disabled</string>
    <string name="statusAborted">aborted</string>
    <string name="statusNetwork">only network location</string>
    <string name="statusNetworkNoGps">gps disabled; sent network location</string>
    <string name="aboutTitle">SMSloc</string>
    <string name="aboutText">© 2013 by René Pfeuffer\n\n
        Find sources in GitHub (https://github.com/pfeuffer/SMSloc)\n\n
        This app comes <b>as it is without any warranty</b>!\n\n
        For error reports, suggestions or questions write to <i>android@pfeuffer-web.de</i></string>
</resources>