<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="trigger"
        android:title="@string/textTitle"
        android:summary="@string/textTriggerDescription"
        android:defaultValue="@string/defaultTrigger" />
    <ListPreference
        android:key="time"
        android:title="@string/timeTitle"
        android:summary="@string/timeDescription"
        android:entries="@array/times"
        android:entryValues="@array/timeValues"
        android:defaultValue="@string/defaultTime" />
    <CheckBoxPreference
        android:key="useNetwork"
        android:title="@string/useNetworkTitle"
        android:summary="@string/useNetworkDescription"
        android:defaultValue="true" />
</PreferenceScreen>
